--- a/src/app/template-form/template-form.component.html
+++ b/src/app/template-form/template-form.component.html
@@ -20,17 +20,18 @@
 
             <div class="d-flex">
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="gender" checked>
+                    <input class="form-check-input" type="radio" name="gender" value="male" required ngModel #gender="ngModel">
                     <label class="form-check-label" for="male">
                         Male
                     </label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="gender">
+                    <input class="form-check-input" type="radio" name="gender" value="female" required ngModel #gender="ngModel">
                     <label class="form-check-label" for="female">
                         Female
                     </label>
                 </div>
+                <span *ngIf="gender.touched && !gender.valid" style="color: red;">Please Please Checked Gender</span>
             </div>
 
             <div class="row mb-3">
@@ -40,27 +41,41 @@
                     Email</span>
             </div>
             <div class="row mb-3">
-                <label for="name" class="col-form-label fw-bold fs-5">{{ lblPassword }}</label>
-                <input type="password" name="password" placeholder="Enter Password" minlength="8" required ngModel
-                    #password="ngModel">
-                <span *ngIf="password.touched && !password.valid" style="color: red;">Please Enter Valid
-                    Password</span>
+                <label for="name" class="col-form-label fw-bold fs-5">{{ lblMobile }}</label>
+                <input type="text" name="mobile" placeholder="Enter Mobile No" minlength="10" maxlength="10" pattern="^[0-9]+$" required ngModel
+                    #mobile="ngModel">
+                <span *ngIf="mobile.touched && !mobile.valid" style="color: red;">Please Enter Valid
+                    Mobile no.</span>
             </div>
             <div class="mt-5">
-                <button class="btn btn-primary" name="submit" id="submit">{{lblSubmit}}</button>
-                <button class="btn btn-danger  ms-5 " name="reset" (click)="templateForm.reset()">{{lblReset}}</button>
+                <button class="btn btn-primary" name="submit" id="submit" (click)="showing(templateForm.value)">{{lblSubmit}}</button>
+                <button class="btn btn-danger ms-5 " name="reset" (click)="templateForm.reset()">{{lblReset}}</button>
             </div>
         </form>
     </div>
-    <div class="col-6">
-
+    <div class="col-6 p-5">
+        <table class="table text-center">
+            <thead>
+                <tr class="bg-dark text-white">
+                    <th>{{ lblFname }}</th>
+                    <th>{{ lblLname }}</th>
+                    <th>{{ lblgender }}</th>
+                    <th>{{ lblEmail }}</th>
+                    <th>{{ lblMobile }}</th>
+                    <th colspan="2">Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let data of userDatas">
+                    <td>{{ data.fname }}</td>
+                    <td>{{ data.lname }}</td>
+                    <td>{{ data.gender }}</td>
+                    <td>{{ data.email }}</td>
+                    <td>{{ data.mobile }}</td>
+                    <td><button class="btn btn-outline-secondary">Edit</button></td>
+                    <td><button class="btn btn-outline-danger">Delete</button></td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
-
-
-<!-- <ul>
-    <li>First name : {{ userData.fname }}</li>
-    <li>Last Name : {{ userData.lname }}</li>
-    <li>Email : {{ userData.email }}</li>
-    <li>Password : {{ userData.password }}</li>
-</ul> -->
