--- a/src/app/template-form/template-form.component.html
+++ b/src/app/template-form/template-form.component.html
@@ -57,6 +57,7 @@
         <table class="table text-center">
             <thead>
                 <tr class="bg-dark text-white">
+                    <th>Id</th>
                     <th>{{ lblFname }}</th>
                     <th>{{ lblLname }}</th>
                     <th>{{ lblgender }}</th>
@@ -66,14 +67,15 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let data of userDatas">
+                <tr *ngFor="let data of userDatas ;let i=index">
+                    <td>{{i+1}}</td>
                     <td>{{ data.fname }}</td>
-                    <td>{{ data.lname }}</td>
+                    <td>{{ data.lname }}</td> 
                     <td>{{ data.gender }}</td>
                     <td>{{ data.email }}</td>
                     <td>{{ data.mobile }}</td>
                     <td><button class="btn btn-outline-secondary">Edit</button></td>
-                    <td><button class="btn btn-outline-danger">Delete</button></td>
+                    <td><button class="btn btn-outline-danger" (click)="deleteRec(data)">Delete</button></td>
                 </tr>
             </tbody>
         </table>
