--- a/src/app/template-form/template-form.component.html
+++ b/src/app/template-form/template-form.component.html
@@ -8,10 +8,11 @@
                 <label for="name" class="col-form-label fw-bold fs-5 col-3">{{ lblFname }}</label>
                 <input type="text" name="fname" id="fname" placeholder="Enter First Name" class="col-9"
                     pattern="^[a-zA-Z]+$" minlength="3" required ngModel #fname="ngModel">
-                <span *ngIf="fname.touched && !fname.valid" style="color: red;margin-left: 23%;">Please Enter Valid
-                    First
-                    Name</span>
+                    <span *ngIf="fname.touched && !fname.valid" style="color: red;margin-left: 23%;">Please Enter Valid
+                        First
+                        Name</span>
             </div>
+
             <div class="row mb-3 d-flex">
                 <label for="name" class="col-form-label fw-bold fs-5 col-3">{{ lblLname }}</label>
                 <input type="text" name="lname" id="lname" placeholder="Enter Last Name" pattern="^[a-zA-Z]+$"
@@ -53,7 +54,9 @@
                         aria-label="Default select example" name="country" id="country" class="col-8" required
                         #country="ngModel" [ngModel]="address">
                         <option selected>Select Your Country</option>
-                        <option *ngFor="let count of countryList">{{count.name}} </option>
+                        <!-- <option *ngFor="let count of countryList">{{count.name}} </option> -->
+                        <option *ngFor="let state of countryy" [value]="state.id">{{state.name}}</option>
+
                     </select>
 
                     <span *ngIf="country.touched && country.pristine" style="color: red;margin-left: 23%;">Please Select
@@ -63,26 +66,37 @@
                 <div class="row mb-3 d-flex">
                     <label for="name" class="col-form-label fw-bold fs-5 col-3 ">{{ lblstate }}</label>
                     <select class="form-select col-8" aria-label="Default select example" class="col-8" name="state"
-                        id="state" required ngModel #state="ngModel" [ngModel]="address" (change)="changeState($event)">
-                        <option selected>Select Your State</option>
-                        <option *ngFor="let city of stat">{{city}} </option>
+                        id="state" required  #state="ngModel" [ngModel]="address" (change)="changeState($event)">
+                        <option selected [ngValue]="null">Select Your State</option>
+                        <!-- <option *ngFor="let city of state">{{city}} </option> -->
+                        <option *ngFor="let city of states" [value]="city.id">{{city.name}}</option>
+                        
 
                     </select>
                     <span *ngIf="state.touched && state.pristine" style="color: red;margin-left: 23%;">Please Select
                         State</span>
+
+                    <span *ngIf="country.untouched && state.touched" style="color: red;margin-left: 23%;">Please Select
+                        Country First
+                    </span>
                 </div>
 
                 <div class="row mb-3 d-flex">
                     <label for="name" class="col-form-label fw-bold fs-5 col-3">{{lblcity}} </label>
                     <select class="form-select" aria-label="Default select example" class="col-8" name="city" id="city"
                         required ngModel #city="ngModel" [ngModel]="address">
-                        <option selected>Select Your City</option>
-                        <option *ngFor="let c of cities">{{ c }}</option>
-
+                        <option selected [ngValue]="null">Select Your City</option>
+                        <!-- <option *ngFor="let c of cities">{{ c }}</option> -->
+                        <option *ngFor="let city of cities" [value]="city.name">{{city.name}}</option>
 
                     </select>
-                    <span *ngIf="city.touched && city.pristine" style="color: red;margin-left: 23%;">Please Select
+
+                    <span *ngIf="(city.touched && city.pristine)" style="color: red;margin-left: 23%;">Please Select
                         City</span>
+                    <span *ngIf="(country.untouched || state.untouched) && city.touched"
+                        style="color: red;margin-left: 23%;">Please Select State First
+                        City</span>
+
                 </div>
 
             </div>
@@ -94,6 +108,7 @@
                 <span *ngIf="email.touched && !email.valid" style="color: red;margin-left: 23%;">Please Enter Valid
                     Email</span>
             </div>
+
             <div class="row mb-3 d-flex">
                 <label for="name" class="col-form-label fw-bold fs-5 col-3">{{ lblMobile }}</label>
                 <input type="text" name="mobile" id="mobile" placeholder="Enter Mobile No" minlength="10" maxlength="10"
@@ -110,7 +125,7 @@
 
         </form>
     </div>
-    <div class="col-6 ">
+    <div class="col-7 ">
         <table class="table text-center">
             <thead>
                 <tr class="bg-dark text-white">
@@ -120,9 +135,9 @@
                     <th>{{ lblgender }}</th>
                     <th>{{ lblEmail }}</th>
                     <th>{{ lblMobile }}</th>
-                    <th>{{ lblcity }}</th>
-                    <th>{{ lblstate }}</th>
                     <th>{{ lblcountry }}</th>
+                    <th>{{ lblstate }}</th>
+                    <th>{{ lblcity }}</th>
                     <th colspan="2">Action</th>
                 </tr>
             </thead>
@@ -134,14 +149,15 @@
                     <td>{{ data.gender }}</td>
                     <td>{{ data.email }}</td>
                     <td>{{ data.mobile }}</td>
-                    <td>{{ data.address.city }}</td>
-                    <td>{{ data.address.state }}</td>
                     <td>{{ data.address.country }}</td>
-                    <td><button class="btn btn-primary" (click)="pushData(data)" (click)="changeState($event)"
+                    <td>{{ data.address.state }}</td>
+                    <td>{{ data.address.city }}</td>
+                    <td><button class="btn btn-primary" (click)="pushData(data)"
                             (click)="changeCountry($event)">Edit</button></td>
                     <td><button class="btn btn-danger" (click)="deleteRec(data)">Delete</button></td>
                 </tr>
-                <tr class="text-center fw-bold fs-5 pt-1" *ngIf="this.userDatas.length == 0">No Records Found</tr>
+                <tr class="text-center fw-bold fs-5 pt-1" *ngIf="this.userDatas.length == 0">
+                    <td colspan="10" style="font-size: 50px;border: none;">No Records Found</td></tr>
             </tbody>
         </table>
     </div>
