--- a/src/app/reactive/reactive.component.html
+++ b/src/app/reactive/reactive.component.html
@@ -1,14 +1,14 @@
-<h1 class="text-primary text-center m-3">Reactive Forms</h1>
+<h1 class="text-primary text-center m-3"> Reactive Forms With CRUD</h1>
 <div class="row">
-    <div class=" col-5 p-4">
+    <div class=" col-sm-5 px-5">
         <form name="form" [formGroup]="reactiveForm" (ngSubmit)="showData()">
-            <div class="row mb-3">
+            <div class="row mb-3 d-flex">
                 <label for="name" class="col-3 col-form-label fw-bold fs-5">{{ lblFname }}</label>
-                <input type="text" name="fname" class="col-sm-8" placeholder="Enter First Name" required minlength="2"
-                    pattern="^[a-zA-Z]+$" formControlName="fname" />
+                <input type="text" name="fname" class="col-sm-8 col-form-control" placeholder="Enter First Name" required minlength="2"
+                    pattern="^[a-zA-Z]+$" formControlName="fname"  />
                 <span *ngIf="fname && fname.touched && fname.invalid" style="color: red;margin-left: 23%;">Please Enter
                     Valid First Name</span>
-                    
+
             </div>
             <div class="row mb-3">
                 <label for="name" class="col-3 col-form-label fw-bold fs-5">{{lblLname}}</label>
@@ -46,9 +46,10 @@
                     <select class="form-select col-8" aria-label="Default select example" name="country" id="country"
                         class="col-8" formControlName="country" (change)="changeCountry($event)">
                         <option selected>Select Your Country</option>
-                        <option *ngFor="let country of countryList">
+                        <!-- <option *ngFor="let country of countryList">
                             {{ country.name }}
-                        </option>
+                        </option> -->
+                        <option *ngFor="let country of countryList" [value]="country.id">{{country.name}}</option>
                     </select>
 
                     <span *ngIf="country && country.touched && country.pristine"
@@ -64,8 +65,9 @@
                         name="state" id="state" class="col-8" required formControlName="state"
                         (change)="changeState($event)">
                         <option selected>Select Your State</option>
-
-                        <option *ngFor="let state of states">{{ state }}</option>
+        
+                        <!-- <option *ngFor="let state of states">{{ state }}</option> -->
+                        <option *ngFor="let state of states" [value]="state.id">{{state.name}}</option>
                     </select>
 
                     <span *ngIf="state && state.touched && state.pristine" style="color: red; margin-left: 23%">Please
@@ -76,14 +78,14 @@
                 </div>
 
                 <div class="row mb-3 d-flex">
-                    <label for="name" class="col-form-label fw-bold fs-5 col-3">{{
-                        lblCity
-                        }}</label>
+                    <label for="name" class="col-form-label fw-bold fs-5 col-3">{{lblCity}}</label>
                     <select placeholder="Phantasyland" class="form-select col-8" aria-label="Default select example"
                         name="city" id="city" class="col-8" required formControlName="city">
                         <option selected>Select Your City</option>
 
-                        <option *ngFor="let city of cities">{{ city }}</option>
+                        <!-- <option *ngFor="let city of cities">{{ city }}</option> -->
+                        <option *ngFor="let city of cities" [value]="city.id">{{city.name}}</option>
+                        
                     </select>
 
                     <span *ngIf="city && city.touched && city.pristine" style="color: red; margin-left: 23%">Please
@@ -98,9 +100,21 @@
 
             <div class="row mb-3">
                 <label for="date" class="col-3 col-form-label fw-bold fs-5">{{lblDate}}</label>
-                <input type="date" name="date" class="col-sm-8" placeholder="Select Date" required formControlName="date">
-                <span *ngIf="date && date.touched && date.pristine" style="color: red; margin-left: 23%">Please Select Date</span>
+                <input type="date" name="date" id="date" class="col-sm-8" placeholder="Select Date" required
+                    formControlName="date">
+                <span *ngIf="date && date.touched && date.pristine" style="color: red; margin-left: 23%">Please Select
+                    Date</span>
             </div>
+
+            <div class="row mb-3">
+                <label for="hobby" class="col-3 col-form-label fw-bold fs-5 ">{{lblHobbies}}</label>
+                <div *ngFor="let hobby of hobbys">
+                    <label>
+                        <input type="checkbox" formArrayName="hobbies" value="{{hobby}}" (change)="hobbySelect($event)">{{hobby}}
+                    </label>
+                </div>
+            </div>
+            <!-- <p>{{reactiveForm.get('hobbies')?.value}}</p> -->
 
             <div class="row mb-3">
                 <label for="name" class="col-3 col-form-label fw-bold fs-5">{{
@@ -116,38 +130,37 @@
                     lblMobile
                     }}</label>
                 <input type="text" name="mobile" class="col-sm-8" placeholder="Enter Mobile" required pattern="^[0-9]+$"
-                    formControlName="mobile" (keydown)="noalphabet($event)" maxlength="10" minlength="10" />
+                    formControlName="mobile" (keydown)="noAlphabet($event)" maxlength="10" minlength="10" />
                 <span *ngIf="mobile && mobile.touched && mobile.invalid" style="color: red; margin-left: 23%">Please
                     Enter
                     Valid Mobile no.</span>
             </div>
 
-            <div class="form-check row d-flex m-5">
-                <input type="checkbox" name="checks" id="" class="col-1" name="checkbox" id="checkboxAgree"
+            <div class="form-check row d-flex m-4">
+                <input type="checkbox" name="checks" id="" class="col-1 " name="checkbox" id="checkboxAgree"
                     formControlName="checkbox" style="color: black;width: 15px;">
                 <label class="form-check-label" class="col-8" for="checkboxAgree">
-                    I agree to <a href="">Terms & Condition</a>
+                    I agree to <a routerLink="">Terms & Condition</a> and <a routerLink="">Privacy Policy</a>
                 </label>
-                <span *ngIf="checkbox?.invalid && checkbox?.touched" style="color: red;">Please Checked Checkbox for
-                    accept Terms & Condition</span>
+                <span *ngIf="checkbox && checkbox.invalid && checkbox.touched" style="color: red;">Please Checked
+                    Checkbox for accept Terms & Condition</span>
             </div>
-
-            <div class="mt-5">
+            <div class="mt-3">
                 <button class="btn btn-primary ms-5" name="submit" id="submit" (click)="showData()">
                     {{ lblSubmit }}
                 </button>
             </div>
-            
+
         </form>
 
 
-        <p class="text-center fw-bold m-5">
+        <p class="text-center fw-bold m-2 fs-4 text-secondary">
             Reactive Form Status : {{ reactiveForm.status }}
         </p>
     </div>
 
-    <div class="col-7">
-        <table class="table text-center table-striped">
+    <div class="col-sm-7 mt-3">
+        <table class="table table-striped  text-center">
             <thead>
                 <tr class="bg-dark text-white">
                     <th>ID</th>
@@ -158,9 +171,9 @@
                     <th>{{ lblState }}</th>
                     <th>{{ lblCity }}</th>
                     <th>{{ lblDate }}</th>
+                    <th>{{ lblHobbies }}</th>
                     <th>{{ lblEmail }}</th>
                     <th>{{ lblMobile }}</th>
-
                     <th colspan="2">Action</th>
                 </tr>
             </thead>
@@ -174,9 +187,9 @@
                     <td>{{ data.address.state }}</td>
                     <td>{{ data.address.city }}</td>
                     <td>{{ data.date }}</td>
+                    <td>{{ data.hobbies }}</td>
                     <td>{{ data.email }}</td>
                     <td>{{ data.mobile }}</td>
-
                     <td>
                         <button class="btn btn-primary" (click)="pushData(data)">Edit</button>
                     </td>
