--- a/src/app/reactive/reactive.component.scss
+++ b/src/app/reactive/reactive.component.scss
@@ -1,3 +1,8 @@
 // tr:nth-child(odd) {
 //     background-color: rgba(241, 238, 238, 0.976);
 // }
+
+.col-form-label:after {
+    content:"*";
+    color:red;
+  }
