Implement multiple errors for controls

--- a/src/app/reactive/reactive.component.scss
+++ b/src/app/reactive/reactive.component.scss
@@ -2,6 +2,10 @@
 //     background-color: rgba(241, 238, 238, 0.976);
 // }
 
+span{
+  color: red;
+  margin-left: 23%;
+}
 .col-form-label:after {
     content:"*";
     color:red;
