--- a/src/app/reactive/reactive.component.html
+++ b/src/app/reactive/reactive.component.html
@@ -4,18 +4,26 @@
         <form name="form" [formGroup]="reactiveForm" (ngSubmit)="showData()">
             <div class="row mb-3 d-flex">
                 <label for="name" class="col-3 col-form-label fw-bold fs-5">{{ lblFname }}</label>
-                <input type="text" name="fname" class="col-sm-8 col-form-control" placeholder="Enter First Name" required minlength="2"
-                    pattern="^[a-zA-Z]+$" formControlName="fname"  />
-                <span *ngIf="formControls['fname'].touched && formControls['fname'].invalid" style="color: red;margin-left: 23%;">Please Enter
-                    Valid First Name</span>
-
+                <input type="text" name="fname" class="col-sm-8 col-form-control" placeholder="Enter First Name"
+                    required minlength="2" pattern="^[a-zA-Z]+$" formControlName="fname" required />
+                <span *ngIf="formControls['fname'].errors?.['required'] && formControls['fname'].touched">
+                    First Name is required.
+                </span>
+                <span *ngIf="formControls['fname'].errors?.['pattern'] && formControls['fname'].touched">
+                    Please Enter Valid First Name
+                </span>
             </div>
+
             <div class="row mb-3">
                 <label for="name" class="col-3 col-form-label fw-bold fs-5">{{lblLname}}</label>
                 <input type="text" name="lname" class="col-sm-8" placeholder="Enter Last Name" required minlength="2"
                     pattern="^[a-zA-Z]+$" formControlName="lname" />
-                <span *ngIf="formControls['lname'].touched && formControls['lname'].invalid" style="color: red; margin-left: 23%">Please Enter
-                    Valid Last Name</span>
+                <span *ngIf="formControls['lname'].errors?.['required'] && formControls['lname'].touched">
+                    Last Name is required.
+                </span>
+                <span *ngIf="formControls['lname'].errors?.['pattern'] && formControls['lname'].touched">
+                    Please Enter Valid Last Name
+                </span>
             </div>
 
             <div class="d-flex">
@@ -35,8 +43,9 @@
                     </a>
                 </div>
             </div>
-            <span *ngIf="formControls['gender'].touched && formControls['gender'].invalid" style="color: red; margin-left: 23%">Please Checked
-                Gender</span>
+            <span *ngIf="formControls['gender'].errors?.['required'] && formControls['gender'].touched">
+                Gender is required.
+            </span>
 
             <div formGroupName="address">
                 <div class="row mb-3 d-flex">
@@ -46,7 +55,7 @@
                     <select class="form-select col-8" aria-label="Default select example" name="country" id="country"
                         class="col-8" formControlName="country" (change)="changeCountry($event)">
                         <option selected>Select Your Country</option>
-                        
+
                         <option *ngFor="let country of countryList" [value]="country.id">{{country.name}}</option>
                     </select>
 
@@ -63,7 +72,7 @@
                         name="state" id="state" class="col-8" required formControlName="state"
                         (change)="changeState($event)">
                         <option selected>Select Your State</option>
-        
+
                         <option *ngFor="let state of states" [value]="state.id">{{state.name}}</option>
                     </select>
 
@@ -81,10 +90,11 @@
                         <option selected>Select Your City</option>
 
                         <option *ngFor="let city of cities" [value]="city.id">{{city.name}}</option>
-                        
+
                     </select>
 
-                    <span *ngIf="city && city.touched && city.pristine" style="color: red; margin-left: 23%">Please Select City</span>
+                    <span *ngIf="city && city.touched && city.pristine" style="color: red; margin-left: 23%">Please
+                        Select City</span>
                     <span *ngIf="city && country && state && (country.untouched || state.untouched) && city.touched"
                         style="color: red; margin-left: 23%">Please Select Country & State First
                     </span>
@@ -96,15 +106,17 @@
                 <label for="date" class="col-3 col-form-label fw-bold fs-5">{{lblDate}}</label>
                 <input type="date" name="date" id="date" class="col-sm-8" placeholder="Select Date" required
                     formControlName="date">
-                <span *ngIf="formControls['date'].touched && formControls['date'].pristine" style="color: red; margin-left: 23%">Please Select
-                    Date</span>
+                <span *ngIf="formControls['date'].errors?.['required'] && formControls['date'].touched">
+                    Date is required.
+                </span>
             </div>
 
-            <div class="row mb-3" >
+            <div class="row mb-3">
                 <label for="hobby" class="col-3  fw-bold fs-5 ">{{lblHobbies}}</label>
                 <div *ngFor="let hobby of hobbys">
                     <label>
-                        <input type="checkbox" formArrayName="hobbies" value="{{hobby}}" (change)="hobbySelect($event)" formArrayName="hobbies">{{hobby}}
+                        <input type="checkbox" formArrayName="hobbies" value="{{hobby}}" (change)="hobbySelect($event)"
+                            formArrayName="hobbies">{{hobby}}
                     </label>
                 </div>
             </div>
@@ -116,18 +128,26 @@
                     }}</label>
                 <input type="email" name="email" class="col-sm-8" placeholder="Enter Email" required
                     formControlName="email" pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+.[a-z]{2,4}$" />
-                <span *ngIf="formControls['email'].touched && formControls['email'].invalid" style="color: red; margin-left: 23%">Please Enter
-                    Valid Email</span>
+                <span *ngIf="formControls['email'].errors?.['required'] && formControls['email'].touched">
+                    Email is required.
+                </span>
+                <span *ngIf="formControls['email'].errors?.['pattern'] && formControls['email'].touched">
+                    Please Enter Valid Email
+                </span>
             </div>
+
             <div class="row mb-3">
                 <label for="name" class="col-3 col-form-label fw-bold fs-5">{{
                     lblMobile
                     }}</label>
                 <input type="text" name="mobile" class="col-sm-8" placeholder="Enter Mobile" required pattern="^[0-9]+$"
                     formControlName="mobile" (keydown)="noAlphabet($event)" maxlength="10" minlength="10" />
-                <span *ngIf="formControls['mobile'].touched && formControls['mobile'].invalid" style="color: red; margin-left: 23%">Please
-                    Enter
-                    Valid Mobile no.</span>
+                <span *ngIf="formControls['mobile'].errors?.['required'] && formControls['mobile'].touched">
+                    Mobile No. is required.
+                </span>
+                <span *ngIf="formControls['mobile'].errors?.['pattern'] && formControls['mobile'].touched">
+                    Please Enter Valid MObile No.
+                </span>
             </div>
 
             <div class="form-check row d-flex m-4">
@@ -136,8 +156,11 @@
                 <label class="form-check-label" class="col-8" for="checkboxAgree">
                     I agree to <a routerLink="">Terms & Condition</a> and <a routerLink="">Privacy Policy</a>
                 </label>
-                <span *ngIf="formControls['checkbox'].invalid && formControls['checkbox'].touched" style="color: red;">Please Checked
-                    Checkbox for accept Terms & Condition</span>
+
+                <span *ngIf="formControls['checkbox'].errors?.['required'] && formControls['checkbox'].touched">
+                    Please Checked Checkbox for accept Terms & Condition
+                </span>
+
             </div>
 
             <div class="mt-3 d-flex">
